<resources>
    <string name="app_name">Mokel-On</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="text_1">Or Login With</string>
    <string name="text_2">Click Here!</string>
    <string name="text_3">Already Register?</string>
    <string name="text_4">Haven\'t Register Yet?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="alamat">Alamat</string>
    <string name="apply">Apply</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="namabengkel">nama bengkel</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>